--- a/package.xml
+++ b/package.xml
@@ -4,10 +4,16 @@
   <name>firgelli_msgs</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="andyz@utexas.edu">andy</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="andy@canyonlakerobotics.com">AndyZe</maintainer>
+  <license>Proprietary</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+ 
+  <depend>std_msgs</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
